# clockwork

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.txt
.github/workflows/: ci.yml  rust-ci.yml
clockwork/: Cargo.toml
clockwork/src/: application.rs  camera.rs  engine.rs  graphics_context.rs  input.rs  input_state.rs  lib.rs  mesh.rs  renderer.rs  shader.wgsl  texture.rs  texture_atlas.rs  util.rs
clockwork/src/graphics/: context.rs  default_meshes.rs  mesh.rs  mod.rs  shader.wgsl  texture.rs
clockwork/src/input/: button.rs  input_state.rs
clockwork/src/util/: camera.rs  mod.rs  repository.rs  texture_atlas.rs
examples/game/: Cargo.toml
examples/game/src/: game.rs  main.rs
examples/game/src/game/: aabb.rs  constants.rs  player.rs  tiles.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: application.rs  main.rs
game/: Cargo.toml  build.rs
game/res/: block.json  dummy32x32.json
game/src/: game.rs  main.rs
game/src/game/: aabb.rs  constants.rs  player.rs  tiles.rs
src/: engine.rs  lib.rs
src/graphics/: context.rs  default_meshes.rs  mesh.rs  mod.rs  shader_textured.wgsl  texture.rs
src/graphics/render_context/: mod.rs  render_operation.rs  shader.wgsl
src/input/: input_state.rs  inputs.rs  mod.rs
src/util/: camera.rs  mod.rs  repository.rs  sprite.rs  texture_atlas.rs
src/util/test_files/: aseprite_basic.json  aseprite_tagged.json
