[package]
name = "clockwork"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.6"
raw-window-handle = "0.5.2"

wgpu = "0.17.0"
pollster = "0.3.0"
image = "0.24.6"
bytemuck = "1.13.1"

num = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"

glam = "0.24.0"
anyhow = "1.0.71"

serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
cargo-readme = "3.2.0"

[badges]
github = { repository = "https://github.com/btarr101/clockwork" }